--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 stl
 .metals
 .vscode
+docs/Countersunk Hole - an overview _ ScienceDirect Topics.pdf
+docs/IntersectionLine2Circle2.pdf
+tests/example-03.en.scad
