Temporary excluded the doc kig file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ stl
 docs/Countersunk Hole - an overview _ ScienceDirect Topics.pdf
 docs/IntersectionLine2Circle2.pdf
 tests/example-03.en.scad
+foundation/docs/elliptical-sector.kig
+foundation/docs/02_2d_primitive.pdf
