--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ docs/IntersectionLine2Circle2.pdf
 tests/example-03.en.scad
 foundation/docs/elliptical-sector.kig
 foundation/docs/02_2d_primitive.pdf
+foundation/docs/ellipse.png
