--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ tests/example-03.en.scad
 foundation/docs/elliptical-sector.kig
 foundation/docs/02_2d_primitive.pdf
 foundation/docs/ellipse.png
+docs/ISO-10642-DRAFT.png
