--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: run tests
-        run: docker run -v $GITHUB_WORKSPACE/:/import:Z  -it giampa/openscad
+        run: docker run -v $GITHUB_WORKSPACE/:/import:Z  -t giampa/openscad
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
