--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,12 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # pull correct image from DOckerHub
-      - name: pull executor
-        run: docker pull ggabbiani/openscad
       # Runs a single command using the runners shell
       - name: run tests
-        run: docker run -v $GITHUB_WORKSPACE/:/import:Z  -t giampa/openscad
+        run: docker run -v $GITHUB_WORKSPACE/:/import:Z  -t ggabbiani/openscad
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
