--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ foundation/docs/elliptical-sector.kig
 foundation/docs/02_2d_primitive.pdf
 foundation/docs/ellipse.png
 docs/ISO-10642-DRAFT.png
+002-003-3DP-Rules-Poster_Hubs_DEF_Thumbnail.jpg
