--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ foundation/docs/02_2d_primitive.pdf
 foundation/docs/ellipse.png
 docs/ISO-10642-DRAFT.png
 002-003-3DP-Rules-Poster_Hubs_DEF_Thumbnail.jpg
+docs/Disegno_Tecnico_Industriale_Slides.pdf
