--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ foundation/docs/ellipse.png
 docs/ISO-10642-DRAFT.png
 002-003-3DP-Rules-Poster_Hubs_DEF_Thumbnail.jpg
 docs/Disegno_Tecnico_Industriale_Slides.pdf
+*.bak
