--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
 stl
 .metals
 .vscode
-docs/Countersunk Hole - an overview _ ScienceDirect Topics.pdf
-docs/IntersectionLine2Circle2.pdf
-tests/example-03.en.scad
-foundation/docs/elliptical-sector.kig
-foundation/docs/02_2d_primitive.pdf
-foundation/docs/ellipse.png
-docs/ISO-10642-DRAFT.png
-002-003-3DP-Rules-Poster_Hubs_DEF_Thumbnail.jpg
-docs/Disegno_Tecnico_Industriale_Slides.pdf
 *.bak
-foundation/docs/dependencies.dot
-vitamins/docs/dependencies.dot
+nogit-*
