auto documentation update

--- a/docs/pics/foundation/256x256/Makefile
+++ b/docs/pics/foundation/256x256/Makefile
@@ -1,8 +1,9 @@
 # explicit wildcard expansion suppresses errors when no files are found
 include $(wildcard *.deps)
 
-# SIZE	= 48,48
-SIZE	= 128,128
+# get desired image sizes from current directory name
+DIR 	= $(subst x, ,$(notdir $(CURDIR)))
+SIZE	= $(word 1,$(DIR)),$(word 2,$(DIR))
 
 %.png: %.scad
 	OPENSCADPATH="/home/giampa/projects:${OPENSCADPATH}" openscad -m make -o $@ --imgsize $(SIZE) -d $@.deps --view axes $<
@@ -10,8 +11,6 @@ SIZE	= 128,128
 %.scad:
 	@echo "include <OFL/library.scad>" >$@
 	@echo "__$(basename $@)__();" >>$@
-
-.PHONY: all clean
 
 all: fig_Supported_walls.png fig_Unsupported_walls.png fig_Support_and_overhangs.png
 
