new 800x600 pics added

--- a/docs/pics/Makefile
+++ b/docs/pics/Makefile
@@ -4,8 +4,13 @@
 # %.png: %.scad
 # 	openscad -m make -o $@ -d $@.deps $<
 
+# SIZE		:= $(notdir $(CURDIR))
+# UNSCALED	:= /tmp/unscaled.png
+
 all:
 	$(MAKE) -C foundation $@
+	$(MAKE) -C 800x600 $@
 
 clean:
 	$(MAKE) -C foundation $@
+	$(MAKE) -C 800x600 $@
