--- a/tests/octant-test.conf
+++ b/tests/octant-test.conf
@@ -1,25 +1,29 @@
-export TEST_DESCRIPTION="3d octant test"
+TEST_DESCRIPTION="3d octant test"
 
-export TEST_INCLUDES="
+TEST_INCLUDES="
 include <../foundation/defs.scad>
-use <../foundation/3d-engine.scad>"
+use <../foundation/3d-engine.scad>
+"
 
-export TAB_PARAMETERS="
+TAB_PARAMETERS="
 \$fn            = 50;       // [3:50]
 // Debug statements are turned on
 \$fl_debug      = false;
 // When true, disables PREVIEW corrections like FL_NIL
 \$FL_RENDER     = false;
 // -2⇒none, -1⇒all, [0..)⇒max depth allowed
-\$FL_TRACES     = -2;       // [-2:10]"
+\$FL_TRACES     = -2;       // [-2:10]
+"
 
-export TAB_Placement="
+TAB_Placement="
 /* [Placement] */
 
 PLACE_NATIVE  = true;
-OCTANT        = [0,0,0];    // [-1:+1]"
+OCTANT        = [0,0,0];    // [-1:+1]
+"
 
-export TAB_TEST="
+TAB_TEST="
 /* [TEST] */
 
-SIZE          = [1,2,3];"
+SIZE          = [1,2,3];
+"
