--- a/tests/foundation/2d_grid-test.conf
+++ b/tests/foundation/2d_grid-test.conf
@@ -1,25 +1,13 @@
-export TEST_DESCRIPTION="2d grid test"
+TEST_DESCRIPTION="2d grid test"
 
-export TEST_INCLUDES="
+TEST_INCLUDES="
 include <../../foundation/unsafe_defs.scad>
 use <../../foundation/2d-engine.scad>
 use <../../foundation/3d-engine.scad>
 use <../../foundation/grid.scad>
 "
 
-export TAB_PARAMETERS="
-\$fn         = 50;           // [3:100]
-// Debug statements are turned on
-\$fl_debug   = false;
-// When true, disables PREVIEW corrections like FL_NIL
-\$FL_RENDER  = false;
-// Default color for printable items (i.e. artifacts)
-\$fl_filament  = \"DodgerBlue\"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
-// -2⇒none, -1⇒all, [0..)⇒max depth allowed
-\$FL_TRACES  = -2;     // [-2:10]
-"
-
-export TAB_TEST="
+TAB_TEST="
 /* [TEST] */
 GRID_SIZE   = [100,100];
 GRID_TYPE   = \"quad\";   // [quad,hex]
