Additions and bug fixes

--- a/tests/bb-test.conf
+++ b/tests/bb-test.conf
@@ -1,1 +1,7 @@
 TEST_DESCRIPTION="Bounding block arithmetic test"
+
+TEST_INCLUDES=""
+TAB_PARAMETERS=""
+TAB_Placement=""
+TAB_Verbs=""
+TAB_TEST=""
