--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -1,6 +1,6 @@
 TAB_PARAMETERS="
 \$fn         = 50;           // [3:100]
-// Debug statements are turned on
+// When true, debug statements are turned on
 \$fl_debug   = false;
 // When true, disables PREVIEW corrections like FL_NIL
 \$FL_RENDER  = false;
@@ -8,4 +8,10 @@ TAB_PARAMETERS="
 \$fl_filament  = \"DodgerBlue\"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
 // -2⇒none, -1⇒all, [0..)⇒max depth allowed
 \$FL_TRACES  = -2;     // [-2:10]
+"
+TAB_Placement="
+/* [Placement] */
+
+PLACE_NATIVE  = true;
+QUADRANT      = [+1,+1];  // [-1:+1]
 "
