--- a/tests/bb-test.conf
+++ b/tests/bb-test.conf
@@ -1,6 +1,7 @@
 TEST_DESCRIPTION="Bounding block arithmetic test"
-
+TEST_TEMPLATE="template-nogui.scad"
 TEST_INCLUDES=""
+
 TAB_PARAMETERS=""
 TAB_Placement=""
 TAB_Verbs=""
