--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -1,3 +1,5 @@
+TEST_TEMPLATE="template-default.scad"
+
 TAB_PARAMETERS="
 \$fn         = 50;           // [3:100]
 // When true, debug statements are turned on
