--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -1,4 +1,4 @@
-TEST_TEMPLATE="template-default.scad"
+TEST_TEMPLATE="template-3d.scad"
 
 TAB_PARAMETERS="
 \$fn         = 50;           // [3:100]
@@ -15,5 +15,15 @@ TAB_Placement="
 /* [Placement] */
 
 PLACE_NATIVE  = true;
-QUADRANT      = [+1,+1];  // [-1:+1]
+OCTANT        = [0,0,0];    // [-1:+1]
+"
+
+TAB_Direction="
+/* [Direction] */
+
+DIR_NATIVE  = true;
+// ARBITRARY direction vector
+DIR_Z       = [0,0,1];  // [-1:0.1:+1]
+// rotation around
+DIR_R       = 0;        // [-360:360]
 "
