--- a/tests/foundation/2d-test.conf
+++ b/tests/foundation/2d-test.conf
@@ -1,5 +1,5 @@
 TEST_DESCRIPTION="2D foundation primitives tests."
-
+TEST_TEMPLATE="template-2d.scad"
 CAMERA="--camera=5,4.32,0,0,0,0,33.88"
 
 TEST_INCLUDES="
@@ -16,6 +16,13 @@ TAB_Verbs="
 \$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+"
+
+TAB_Placement="
+/* [Placement] */
+
+PLACE_NATIVE  = true;
+QUADRANT      = [+1,+1];  // [-1:+1]
 "
 
 TAB_TEST="
