--- a/tests/foundation/2d_grid-test.conf
+++ b/tests/foundation/2d_grid-test.conf
@@ -7,6 +7,9 @@ use <../../foundation/3d-engine.scad>
 use <../../foundation/grid.scad>
 "
 
+TAB_Placement=""
+TAB_Direction=""
+
 TAB_TEST="
 /* [TEST] */
 GRID_SIZE   = [100,100];
