--- a/tests/quadrant-test.conf
+++ b/tests/quadrant-test.conf
@@ -1,5 +1,5 @@
 TEST_DESCRIPTION="2d quadrant test"
-
+TEST_TEMPLATE="template-2d.scad"
 TEST_INCLUDES="
 include <../foundation/defs.scad>
 use <../foundation/2d-engine.scad>"
@@ -8,7 +8,8 @@ TAB_Placement="
 /* [Placement] */
 
 PLACE_NATIVE  = true;
-QUADRANT      = [0,0];      // [-1:+1]"
+QUADRANT      = [+1,+1];  // [-1:+1]
+"
 
 TAB_TEST="
 /* [TEST] */
