--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -1,4 +1,9 @@
 TEST_TEMPLATE="template-3d.scad"
+TEST_PROLOGUE="
+direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
+octant    = PLACE_NATIVE  ? undef : OCTANT;
+debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
+"
 
 TAB_PARAMETERS="
 \$fn         = 50;           // [3:100]
@@ -10,6 +15,8 @@ TAB_PARAMETERS="
 \$fl_filament  = \"DodgerBlue\"; // [DodgerBlue,Blue,OrangeRed,SteelBlue]
 // -2⇒none, -1⇒all, [0..)⇒max depth allowed
 \$FL_TRACES  = -2;     // [-2:10]
+SHOW_LABELS     = false;
+SHOW_SYMBOLS    = false;
 "
 TAB_Placement="
 /* [Placement] */
