--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -3,6 +3,8 @@ TEST_PROLOGUE="
 direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
 octant    = PLACE_NATIVE  ? undef : OCTANT;
 debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
+
+fl_status();
 "
 
 TAB_PARAMETERS="
