--- a/pics/foundation/256x256/Makefile
+++ b/pics/foundation/256x256/Makefile
@@ -5,7 +5,6 @@ include $(wildcard *.deps)
 SIZE		:= $(notdir $(CURDIR))
 SOURCES 	:= $(wildcard *.scad)
 TARGETS		:= $(SOURCES:.scad=.png)
-UNSCALED	:= /tmp/unscaled.png
 
 # .PHONY: all
 
@@ -13,7 +12,7 @@ UNSCALED	:= /tmp/unscaled.png
 all: $(TARGETS)
 
 %.png: %.scad
-	OPENSCADPATH="/home/giampa/projects:${OPENSCADPATH}" openscad -m make -o $(UNSCALED) --imgsize 9600,9600 -d $@.deps --view axes $<
+	$(SCAD) --imgsize 9600,9600 -d $@.deps $<
 	convert $(UNSCALED) -resize $(SIZE) $@
 	rm $(UNSCALED)
 
