--- a/pics/800x600/Makefile
+++ b/pics/800x600/Makefile
@@ -5,7 +5,6 @@ include $(wildcard *.deps)
 # 	openscad -m make -o $@ -d $@.deps $<
 
 SIZE		:= $(notdir $(CURDIR))
-UNSCALED	:= /tmp/unscaled.png
 
 all:	cover.png torus.png
 
@@ -13,9 +12,9 @@ clean:
 	rm *.png *.deps
 
 cover.png: $(EXAMPLES)/rpi4-box.scad $(EXAMPLES)/rpi4-box.json
-	OPENSCADPATH="/home/giampa/projects:${OPENSCADPATH}" openscad -o $(UNSCALED) --imgsize 3200,2400 -d $@.deps --view axes --p $(EXAMPLES)/rpi4-box.json --P cover --camera="7.62939e-7,0,11.925,68.3,0,140.5,281.12" $(EXAMPLES)/rpi4-box.scad
+	$(SCAD) --imgsize 3200,2400 -d $@.deps --p $(EXAMPLES)/rpi4-box.json --P cover --camera="7.62939e-7,0,11.925,68.3,0,140.5,281.12" $(EXAMPLES)/rpi4-box.scad
 	convert $(UNSCALED) -resize $(SIZE) $@
 
 torus.png: $(TESTS)/foundation/torus-test.scad $(TESTS)/foundation/torus-test.json
-	OPENSCADPATH="/home/giampa/projects:${OPENSCADPATH}" openscad -o $(UNSCALED) --imgsize 3200,2400 -d $@.deps --view axes --p $(TESTS)/foundation/torus-test.json --P torus $(TESTS)/foundation/torus-test.scad
+	$(SCAD) --imgsize 3200,2400 -d $@.deps --p $(TESTS)/foundation/torus-test.json --P torus $(TESTS)/foundation/torus-test.scad
 	convert $(UNSCALED) -resize $(SIZE) $@
