--- a/pics/foundation/Makefile
+++ b/pics/foundation/Makefile
@@ -5,7 +5,9 @@
 # 	openscad -m make -o $@ -d $@.deps $<
 
 all:
+	@$(MAKE) -C 800x600 $@
 	@$(MAKE) -C 256x256 $@
 
 clean:
+	@$(MAKE) -C 800x600 $@
 	@$(MAKE) -C 256x256 $@
