--- a/orthodocs/Makefile
+++ b/orthodocs/Makefile
@@ -1,7 +1,17 @@
 ODOX		:= orthodocs
 DOC_ROOT	:= $(CURDIR)
 
+.PHONY: pics
+
+all: api-docs pics
+
 api-docs: $(LIB_SOURCES)
-	$(info "Sources: $(LIB_SOURCES)")
-	$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
+	@$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
 	@touch $@
+
+pics:
+	@$(MAKE) -C foundation
+
+clean:
+	@rm -f *.md
+	@rm -f api-docs
