foundation/defs.scad renamed as foundation/core.scad

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,6 @@
-.PHONY: 800x600 foundation
+.PHONY: 800x600 artifacts foundation vitamins
 
-all: 800x600 architecture.png foundation
+all: 800x600 architecture.png artifacts foundation vitamins
 
 800x600:
 	@$(MAKE) -C $@
@@ -8,8 +8,18 @@ all: 800x600 architecture.png foundation
 architecture.png: architecture.drawio
 	@drawio --export --format png --output $(CURDIR)/$@ $<
 
+artifacts:
+	@$(MAKE) -C $@
+
 foundation:
+	@$(MAKE) -C $@
+
+vitamins:
 	@$(MAKE) -C $@
 
 clean:
 	@rm -f architecture.png
+	@$(MAKE) -C 800x600 $@
+	@$(MAKE) -C artifacts $@
+	@$(MAKE) -C foundation $@
+	@$(MAKE) -C vitamins $@
