--- a/docs/foundation/800x600/Makefile
+++ b/docs/foundation/800x600/Makefile
@@ -6,11 +6,11 @@
 
 SIZE		:= $(notdir $(CURDIR))
 FOUNDATION	:= $(LIB_ROOT)/foundation
-pics		:= pic-0.png pic-1.png pic-2.png pic-3.png pic-4.png pic-5.png pic-6.png pic-7.png pic-8.png pic-9.png torus.png
+PICTURES	:= pic-0.png pic-1.png pic-2.png pic-3.png pic-4.png pic-5.png pic-6.png pic-7.png pic-8.png pic-9.png torus.png
 
 # include $(pics:.png=.deps)
 
-all:	pic-0.png pic-1.png pic-2.png pic-3.png pic-4.png pic-5.png pic-6.png pic-7.png pic-8.png pic-9.png torus.png
+all:	$(PICTURES)
 
 clean:
 	@rm -f *.png *.deps
