tube.scad and torus.scad merged into foundation/3d-engine.scad

--- a/docs/foundation/Makefile
+++ b/docs/foundation/Makefile
@@ -10,7 +10,9 @@ all: dependencies.svg
 	@$(MAKE) -C 800x600 $@
 
 dependencies.svg: $(FOUNDATION_SOURCES)
+	@echo -n "$(CURDIR)/$@: "
 	@$(DEPS) --foundation
+	@echo -e "\e[32mOK\e[0m"
 
 clean:
 	@$(MAKE) -C 800x600 $@
