--- a/docs/artifacts/Makefile
+++ b/docs/artifacts/Makefile
@@ -9,7 +9,9 @@
 all: dependencies.svg
 
 dependencies.svg: $(ARTIFACTS_SOURCES)
+	@echo -n -e "\e[33m$(CURDIR)/$@\e[0m: "
 	@$(DEPS) --artifacts
+	@echo -e "\e[32mOK\e[0m"
 
 clean:
 	@rm -f dependencies.svg
