--- a/docs/800x600/Makefile
+++ b/docs/800x600/Makefile
@@ -9,9 +9,11 @@ SIZE		:= $(notdir $(CURDIR))
 all:	cover.png
 
 cover.png: $(EXAMPLES)/sbc-box.scad $(EXAMPLES)/sbc-box.json
+	@echo -n "$(CURDIR)/$@: "
 	@$(SCAD) --imgsize 3200,2400 -d $(@:.png=.deps) --p $(EXAMPLES)/sbc-box.json --P cover --camera="7.62939e-7,0,11.925,68.3,0,140.5,281.12" -o unscaled-$@ $(EXAMPLES)/sbc-box.scad
 	@convert unscaled-$@ -resize $(SIZE) $@
 	@rm -f unscaled-$@
+	@echo -e "\e[32mOK\e[0m"
 
 clean:
 	@rm -f *.png *.deps
