--- a/tests/artifacts/tprofiles-test.conf
+++ b/tests/artifacts/tprofiles-test.conf
@@ -6,35 +6,27 @@ TAB_Verbs="
 /* [Supported verbs] */
 
 // adds shapes to scene.
-ADD       = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
-// layout of predefined auxiliary shapes (like predefined screws)
-ASSEMBLY  = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_ADD       = \"ON\";   // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds local reference axes
-AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
-BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
-// layout of predefined drill shapes (like holes with predefined screw diameter)
-DRILL     = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a footprint to scene, usually a simplified FL_ADD
-FOOTPRINT = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
-// layout of user passed accessories (like alternative screws)
-LAYOUT    = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+\$FL_FOOTPRINT = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 TAB_TEST="
 /* [T Profile] */
 
-PROFILE = \"FL_E1515\"; // [FL_E1515,FL_E2020,FL_E2020t,FL_E2040,FL_E2060,FL_E2080,FL_E3030,FL_E3060,FL_E4040,FL_E4040t,FL_E4080]
-LENGTH  = 50;
+PROFILE     = \"FL_E1515\"; // [FL_E1515,FL_E2020,FL_E2020t,FL_E2040,FL_E2060,FL_E2080,FL_E3030,FL_E3060,FL_E4040,FL_E4040t,FL_E4080]
+LENGTH      = 50;
+CORNER_HOLE = false;
 "
 TEST_CODE="
 verbs=[
-  if (ADD!=\"OFF\")       FL_ADD,
-  if (ASSEMBLY!=\"OFF\")  FL_ASSEMBLY,
-  if (AXES!=\"OFF\")      FL_AXES,
-  if (BBOX!=\"OFF\")      FL_BBOX,
-  if (DRILL!=\"OFF\")     FL_DRILL,
-  if (FOOTPRINT!=\"OFF\") FL_FOOTPRINT,
-  if (LAYOUT!=\"OFF\")    FL_LAYOUT,
+  if (\$FL_ADD!=\"OFF\")       FL_ADD,
+  if (\$FL_AXES!=\"OFF\")      FL_AXES,
+  if (\$FL_BBOX!=\"OFF\")      FL_BBOX,
+  if (\$FL_FOOTPRINT!=\"OFF\") FL_FOOTPRINT,
 ];
 
 profile = PROFILE==\"FL_E1515\"   ? FL_E1515
@@ -49,5 +41,5 @@ profile = PROFILE==\"FL_E1515\"   ? FL_E1515
         : PROFILE==\"FL_E4040t\"  ? FL_E4040t
         : FL_E4080;
 
-fl_tprofile(verbs,profile,LENGTH,debug,direction,octant);
+fl_tprofile(verbs,profile,LENGTH,CORNER_HOLE,debug,direction,octant);
 "
