fl_octant improvement

--- a/tests/artifacts/tprofiles-test.conf
+++ b/tests/artifacts/tprofiles-test.conf
@@ -43,5 +43,5 @@ xsec  = PROFILE==\"E1515\"   ? FL_TSP_E1515
 
 profile = fl_tsp_TProfile(xsec,LENGTH);
 
-fl_tProfile(verbs,profile,debug,direction,octant);
+fl_tProfile(verbs,profile,debug=debug,direction=direction,octant=octant);
 "
