--- a/tests/defaults.conf
+++ b/tests/defaults.conf
@@ -1,12 +1,14 @@
 Placement_3D="
 /* [Placement] */
 
-PLACE_NATIVE  = true;
-OCTANT        = [0,0,0];    // [-1:+1]
+X_PLACE = \"undef\";  // [undef,-1,0,+1]
+Y_PLACE = \"undef\";  // [undef,-1,0,+1]
+Z_PLACE = \"undef\";  // [undef,-1,0,+1]
 "
+
 PROLOGUE_3D="
 direction = DIR_NATIVE    ? undef : [DIR_Z,DIR_R];
-octant    = PLACE_NATIVE  ? undef : OCTANT;
+octant    = fl_parm_Octant(X_PLACE,Y_PLACE,Z_PLACE);
 debug     = fl_parm_Debug(SHOW_LABELS,SHOW_SYMBOLS);
 
 fl_status();
